# lancedb-viewer

./: .gitignore  AGENTS.md  DESIGN.md  README.md  UI_DESIGN.md  biome.json  index.html  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
.agenta/: project.yaml
.serena/: project.yml
.serena/memories/: conventions.md  core.md  suggested_commands.md  task_completion.md  tech_stack.md
dev_docs/exec/: review-stabilization-2026-06-15.md  ui-inspection-2026-06-16.md
src/: App.vue  auto-imports.d.ts  components.d.ts  main.ts  router.ts  style.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: v1.rs  v1_tests.rs
src-tauri/src/domain/: connect.rs
src-tauri/src/ipc/: v1.rs
src-tauri/src/services/: connection_manager.rs  mod.rs  v1.rs
src-tauri/tests/: commands_v1.rs
src/components/: DataResultTable.vue  StatusMessageBridge.vue
src/composables/: statusMessagePolicy.test.ts  statusMessagePolicy.ts  useCommand.ts  useConnection.ts  useProfiles.ts  useStatusMessages.ts  useTheme.ts  workspaceContext.ts
src/ipc/: v1.ts
src/lib/: arrowDecoder.test.ts  arrowDecoder.ts  authDescriptor.ts  connectionKind.ts  credentialReferences.ts  credentialVault.ts  formatters.test.ts  formatters.ts  lancedbUri.ts  tauriClient.test.ts  tauriClient.ts
src/models/: profile.ts
src/stores/: profiles.ts
src/theme/: naiveTheme.ts
src/views/: CapabilitiesView.vue  ConnectionCredentialsView.vue  CredentialsView.vue  EditConnectionDialog.vue  (+3 more)
(+63 files in other folders)
