[package]
name = "lancedb-viewer"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lancedb_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
lancedb = "0.23.1"
log = "0.4.29"
backtrace = "0.3.76"
arrow-array = "56.2.0"
arrow-schema = "56.2.0"
arrow-json = "56.2.0"
futures-util = "0.3"
uuid = { version = "1.10.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.12.0"
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }

